Cleaned html errors

--- a/templates/add_skiresort.html
+++ b/templates/add_skiresort.html
@@ -26,7 +26,7 @@
                         </div>
                         <div class="input-field col s12 m6 l6 xl6">
                             <i class="material-icons prefix">terrain</i>
-                            <select class="icons dropdown-content validate" id="glacier" name="glacier" required aria-required="true">
+                            <select class="icons dropdown-content validate" id="glacier" name="glacier" required>
                                 <option value="" disabled selected>Glacier</option>
                                 <option value="yes">Yes</option>
                                 <option value="no">No</option>
@@ -34,7 +34,7 @@
                         </div>
                         <div class="input-field col s12 m6 l6 xl6">
                             <i class="material-icons prefix">brightness_3</i>
-                            <select class="icons dropdown-content validate" id="night" name="night" required aria-required="true">
+                            <select class="icons dropdown-content validate" id="night" name="night" required>
                                 <option value="" disabled selected>Night skiing</option>
                                 <option value="yes">Yes</option>
                                 <option value="no">No</option>
