--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -22,12 +22,12 @@
                         <div class="input-field col s12 m6 l6">
                             <i class="material-icons prefix">today</i>
                             <input id="from" name="from" type="text" class="datepicker" required>
-                            <label for="icon_prefix">From:</label>
+                            <label for="from">From:</label>
                         </div>
                         <div class="input-field col s12 m6 l6">
                             <i class="material-icons prefix">today</i>
                             <input id="to" name="to" type="text" class="datepicker" required>
-                            <label for="icon_prefix">To:</label>
+                            <label for="to">To:</label>
                         </div>
                         <div class="input-field col s12 m6 l6">
                             <i class="material-icons prefix">supervisor_account</i>
@@ -43,7 +43,7 @@
                         </div> 
                         <div class="input-field col s12 m6 l6">
                             <i class="material-icons prefix">ac_unit</i>
-                            <select class="validate" id="ski_snowboard" name="ski_snowboard" required aria-required="true">
+                            <select class="validate" id="ski_snowboard" name="ski_snowboard" required>
                                 <option value="" disabled selected>Ski/Snowboard</option>
                                 <option value="ski">Ski</option>
                                 <option value="Snowboard">Snowboard</option>
