--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -19,7 +19,7 @@
                             </div>
                             <div class="input-field col s12 m6 l6 xl6">
                                 <i class="material-icons prefix">wc</i>
-                                <select class="validate" id="gender" name="gender" required aria-required="true">
+                                <select class="validate" id="gender" name="gender" required>
                                     <option value="" disabled selected>Gender</option>
                                     <option value="male">Male</option>
                                     <option value="female">Female</option>
@@ -27,7 +27,7 @@
                             </div>
                             <div class="input-field col s12 m6 l6 xl6">
                                 <i class="material-icons prefix">date_range</i>
-                                <select class="validate" id="ageRange" name="ageRange" required aria-required="true">
+                                <select class="validate" id="ageRange" name="ageRange" required>
                                     <option value="" disabled selected>Age</option>
                                     <option value="18-25">18 to 25</option>
                                     <option value="26-32">26 to 32</option>
@@ -42,7 +42,7 @@
                             </div>
                             <div id="signup-select" class="input-field col s12 m6 l6 xl6">
                                 <i class="material-icons prefix">face</i>
-                                <select class="icons dropdown-content validate" id="avatar" name="avatar" aria-required="true" required>
+                                <select class="icons dropdown-content validate" id="avatar" name="avatar" required>
                                     <option value="" disabled selected>Avatar</option>
                                     <option value="/static/img/avatar/boot.png" data-icon="/static/img/avatar/boot.png">SkiBoot</option>
                                     <option value="/static/img/avatar/cabin.png" data-icon="/static/img/avatar/cabin.png">Cabin</option>
