--- a/templates/edit_trip.html
+++ b/templates/edit_trip.html
@@ -22,12 +22,12 @@
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">today</i>
                             <input value="{{trip.from}}" id="from" name="from" type="text" class="datepicker" required>
-                            <label for="icon_prefix">From:</label>
+                            <label for="from">From:</label>
                         </div>
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">today</i>
                             <input value="{{trip.to}}" id="to" name="to" type="text" class="datepicker" required>
-                            <label for="icon_prefix">To:</label>
+                            <label for="to">To:</label>
                         </div>
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">supervisor_account</i>
@@ -39,8 +39,8 @@
                         </div>
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">ac_unit</i>
-                            <select class="validate" id="ski_snowboard" name="ski_snowboard" required aria-required="true">
-                                <option value="{{trip.ski_snowboard}}" disabled selected>{{trip.ski_snowboard}}</option>
+                            <select class="validate" id="ski_snowboard" name="ski_snowboard" required>
+                                <option placeholder="{{trip.ski_snowboard}}" value="" disabled selected>{{trip.ski_snowboard}}</option>
                                 <option value="Ski">Ski</option>
                                 <option value="Snowboard">Snowboard</option>
                             </select>
