Html errors cleanup

--- a/templates/edit_trip.html
+++ b/templates/edit_trip.html
@@ -40,7 +40,7 @@
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">ac_unit</i>
                             <select class="validate" id="ski_snowboard" name="ski_snowboard" required>
-                                <option placeholder="{{trip.ski_snowboard}}" value="" disabled selected>{{trip.ski_snowboard}}</option>
+                                <option value="{{trip.ski_snowboard}}" selected>{{trip.ski_snowboard}}</option>
                                 <option value="Ski">Ski</option>
                                 <option value="Snowboard">Snowboard</option>
                             </select>
