--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -30,11 +30,11 @@
                         <div class="col s12 m5 l5">
                             <div class="row"> 
                                 <div class="col s6 m6 l6">
-                                    <span class="skiresort-title"><p>{{skiresort.location_name}}</p></span>  
-                                    <span><p class="skiresort-description">{{skiresort.description}}</p></span>
+                                    <span class="skiresort-title">{{skiresort.location_name}}</span>  
+                                    <span class="skiresort-description">{{skiresort.description}}</span>
                                 </div>
                                 <div class="col s6 m6 l6 thumbnail-div">
-                                    <img class="thumbnail" src="{{skiresort.thumbnail}}" width="85" height="85"/>
+                                    <img class="thumbnail" src="{{skiresort.thumbnail}}" width="85" height="85" alt="Ski Resort Thumbnail"/>
                                 </div>
                             </div>
                         </div>
