--- a/templates/edit_trip.html
+++ b/templates/edit_trip.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">ac_unit</i>
-                            <select class="validate" id="ski_snowboard" name="ski_snowboard" required>
+                            <select class="validate" id="ski_snowboard" name="ski_snowboard" size="2" required>
                                 <option value="{{trip.ski_snowboard}}" selected>{{trip.ski_snowboard}}</option>
                                 <option value="Ski">Ski</option>
                                 <option value="Snowboard">Snowboard</option>
