--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -31,7 +31,7 @@
                             <div class="row"> 
                                 <div class="col s6 m6 l6">
                                     <span class="skiresort-title">{{skiresort.location_name}}</span>  
-                                    <span class="skiresort-description">{{skiresort.description}}</span>
+                                    <p><span class="skiresort-description">{{skiresort.description}}</span></p>
                                 </div>
                                 <div class="col s6 m6 l6 thumbnail-div">
                                     <img class="thumbnail" src="{{skiresort.thumbnail}}" width="85" height="85" alt="Ski Resort Thumbnail"/>
