Updated UX on index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,10 @@
                 <div class="white-text text-darken-2">
                     <p class="intro-title">START / JOIN A SNOW TEAM</p>
                     <ul id="index-list">
-                        <li><a class="index-link" href="{{url_for('sign_up_page')}}"><i class="fa fa-user-plus fa-fw"></i>&nbsp;&nbsp;&nbsp;SIGN UP</a></li>
-                        <li><a class="index-link" href="{{url_for('sign_in_page')}}"><i class="fa fa-tram fa-fw"></i>&nbsp;&nbsp;&nbsp;POST TRIPS</a></li>
-                        <li><a class="index-link" href="{{url_for('sign_in_page')}}"><i class="fa fa-search fa-fw"></i>&nbsp;&nbsp;&nbsp;SEARCH TRIPS</a></li>
-                        <li><a class="index-link" href="{{url_for('sign_in_page')}}"><i class="fas fa-user-friends fa-fw"></i>&nbsp;&nbsp;&nbsp;TEAM UP</a></li>
+                        <li><i class="fa fa-mandalorian"></i>&nbsp;&nbsp;&nbsp;SIGN UP</li>
+                        <li><i class="fa fa-tram fa-fw"></i>&nbsp;&nbsp;&nbsp;POST TRIPS</li>
+                        <li><i class="fa fa-search fa-fw"></i>&nbsp;&nbsp;&nbsp;SEARCH TRIPS</li>
+                        <li><i class="fas fa-user-friends fa-fw"></i>&nbsp;&nbsp;&nbsp;TEAM UP</li>
                         <li><i class="fa fa-skiing fa-fw"></i>&nbsp;&nbsp;&nbsp;HIT THE SLOPES!</li>
                     </ul>
                 </div>
