Functionality fixed-final commit

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
                     <ul id="index-list">
                         <li><i class="fa fa-mandalorian"></i>&nbsp;&nbsp;&nbsp;SIGN UP</li>
                         <li><i class="fa fa-tram fa-fw"></i>&nbsp;&nbsp;&nbsp;POST TRIPS</li>
-                        <li><i class="fa fa-search fa-fw"></i>&nbsp;&nbsp;&nbsp;SEARCH TRIPS</li>
+                        <li><i class="fa fa-search-location"></i>&nbsp;&nbsp;&nbsp;SEARCH TRIPS</li>
                         <li><i class="fas fa-user-friends fa-fw"></i>&nbsp;&nbsp;&nbsp;TEAM UP</li>
                         <li><i class="fa fa-skiing fa-fw"></i>&nbsp;&nbsp;&nbsp;HIT THE SLOPES!</li>
                     </ul>
